added parsers to snakefile

--- a/atlas/Snakefile
+++ b/atlas/Snakefile
@@ -6,6 +6,8 @@ from snakemake.utils import logger, min_version, update_config
 
 from default_values import *
 
+from parsers import write_cd_hit_clusters, parse_cd_hit_file
+
 # get default values and update them with values specified in config file
 default_config = make_default_config()
 update_config(default_config, config)
