--- a/atlas/Snakefile
+++ b/atlas/Snakefile
@@ -120,6 +120,14 @@ def input_params_for_bbwrap(wildcards, input):
     return flag
 
 
+def gen_names_for_range(N,prefix='',start=1):
+    """generates a range of IDS with leading zeros so sorting will be ok"""
+    n_leading_zeros= len(str(N))
+    format_int=prefix+'{:0'+str(n_leading_zeros)+'d}'
+    return [format_int.format(i) for i in range(start,N+start)]
+
+
+
 def define_groups(samples):
 
     from collections import defaultdict
