--- a/atlas/Snakefile
+++ b/atlas/Snakefile
@@ -295,7 +295,10 @@ elif config.get("workflow") == "binning":
             expand("reports/bin_report_{binner}.html", binner=config['final_binner']),
             "genomes/Dereplication/dereplicated_genomes",
             "genomes/checkm/taxonomy.tsv",
-            "genomes/SSU/ssu_summary.tsv"
+            "genomes/counts/median_coverage_genomes.tsv",
+            "genomes/cluster_attribution.tsv",
+            "genomes/SSU/ssu_summary.tsv",
+
 
 
 
