option for rna spades

--- a/atlas/template_config.yaml
+++ b/atlas/template_config.yaml
@@ -102,7 +102,8 @@ megahit_preset: default
 spades_skip_BayesHammer: False
 #Comma-separated list of k-mer sizes to be used (all values must be odd, less than 128 and listed in ascending order).
 spades_k: auto
-
+spades_preset: meta
+spades_extra: ""
 
 # Filtering
 #------------
