--- a/atlas/Snakefile
+++ b/atlas/Snakefile
@@ -203,7 +203,8 @@ elif config.get("workflow", "complete") == "complete":
                 sample=SAMPLES),
             expand("{sample}/finished_assembly", sample=SAMPLES),
             REPORTS,
-            expand("{sample}/{sample}_annotations.txt", sample=SAMPLES),
+            "Genecatalog/genecatalog_finished"
+            #expand("{sample}/{sample}_annotations.txt", sample=SAMPLES),
 
 # checkpoint finished contigs, no annotation
     localrules: finish_assembly
