--- a/atlas/envs/DASTool.yaml
+++ b/atlas/envs/DASTool.yaml
@@ -5,12 +5,4 @@ channels:
     - conda-forge
     - defaults
 dependencies:
-    - r>=3.4.3
-    - r-data.table>=1.11.4
-    - r-domc=1.3.5
-    - r-ggplot2=2.2.1
-    - ruby=2.4.4
-    - prodigal=2.6.3
-    - diamond=0.9.22
-    - blast=2.7.1
-    - pullseq=1.0.2
+    - das_tool=1.1.1
