--- a/atlas/Snakefile
+++ b/atlas/Snakefile
@@ -292,7 +292,7 @@ elif config.get("workflow") == "binning":
     rule all:
         input:
             expand("{sample}/binning/{binner}/cluster_attribution.tsv",
-                   binner=config['binner'], sample =SAMPLES),
+                   binner=config['final_binner'], sample =SAMPLES),
             expand("reports/bin_report_{binner}.html", binner=config['final_binner']),
             "genomes/Dereplication/dereplicated_genomes",
             "genomes/checkm/taxonomy.tsv",
