metabat from ursky instead of bioconda for working on osx

--- a/atlas/envs/metabat.yaml
+++ b/atlas/envs/metabat.yaml
@@ -1,8 +1,8 @@
 channels:
-    - bioconda
-    - conda-forge
+    - ursky # needs to be before bioconda
     - defaults
-    - ursky
+    - conda-forge
+    - bioconda
     - r
 dependencies:
     - metabat2
