--- a/atlas/template_config.yaml
+++ b/atlas/template_config.yaml
@@ -61,7 +61,7 @@ contaminant_ambiguous: best
 # Pre-assembly-processing
 ########################
 
-normalize_reads_before_assembly : true
+normalize_reads_before_assembly : false
 # target kmer depth
 normalization_target_depth: 10000
 normalization_kmer_length: 21
