--- a/atlas/Snakefile
+++ b/atlas/Snakefile
@@ -4,6 +4,9 @@ import sys
 import tempfile
 from snakemake.utils import logger, min_version, update_config
 
+
+sys.path.append(os.path.join(os.path.dirname(os.path.abspath(workflow.snakefile)),scripts)
+
 from default_values import *
 
 
