--- a/atlas/template_config.yaml
+++ b/atlas/template_config.yaml
@@ -61,7 +61,7 @@ contaminant_ambiguous: best
 # Pre-assembly-processing
 ########################
 
-normalize_reads_before_assembly : true
+normalize_reads_before_assembly : false
 # target kmer depth
 normalization_target_depth: 10000
 normalization_kmer_length: 21
@@ -102,7 +102,7 @@ megahit_preset: default
 spades_skip_BayesHammer: False
 #Comma-separated list of k-mer sizes to be used (all values must be odd, less than 128 and listed in ascending order).
 spades_k: auto
-spades_preset: meta
+spades_preset: meta    # meta, ,normal, rna  single end libraries doesn't work for metaspades
 spades_extra: ""
 
 # Filtering
