--- a/atlas/template_config.yaml
+++ b/atlas/template_config.yaml
@@ -100,6 +100,7 @@ megahit_preset: default
 # Spades
 #------------
 spades_skip_BayesHammer: False
+spades_use_scaffolds: False # otherwise use contigs
 #Comma-separated list of k-mer sizes to be used (all values must be odd, less than 128 and listed in ascending order).
 spades_k: auto
 spades_preset: meta    # meta, ,normal, rna  single end libraries doesn't work for metaspades
