--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,8 +14,6 @@ jobs:
     parallelism: 1
     steps:
       - checkout
-      - run: mkdir -p work
-      - run: mv example_data work
       - run: conda config --add channels conda-forge
       - run: conda config --add channels bioconda
       - run: conda config --set always_yes true
@@ -29,14 +27,14 @@ jobs:
       - run: atlas assemble --help
       - run: atlas bin-genomes --help
       # make config
-      - run: ls work/example_data
-      - run: cd work
+      - run: ls example_data
       - run: atlas make-config --database-dir $DATABASE_DIR --threads $N_THREADS --assembler spades config.yaml example_data
       # dryrun
       - run: atlas download --dryrun
       - run: atlas qc config.yaml -d $WORKING_DIR --dryrun
       - run: atlas assemble config.yaml -d $WORKING_DIR --dryrun
       - run: atlas bin-genomes config.yaml -d $WORKING_DIR --dryrun
+      - run: atlas assemble config.yaml -d $WORKING_DIR --dryrun gene_catalog # run gene catalog
 
 
 workflows:
