--- a/atlas/template_config.yaml
+++ b/atlas/template_config.yaml
@@ -30,6 +30,7 @@ database_dir: databases
 ########################
 # Quality control
 ########################
+data_type: metagenome # metagenome or metatranscriptome
 # remove (PCR)-duplicated reads using clumpify
 deduplicate: true
 duplicates_only_optical: false
