--- a/atlas/Snakefile
+++ b/atlas/Snakefile
@@ -153,6 +153,7 @@ rule genomes:
         "genomes/Dereplication/dereplicated_genomes",
         "genomes/checkm/taxonomy.tsv",
         "genomes/counts/median_coverage_genomes.tsv",
+        "genomes/counts/raw_counts_genomes.tsv",
         "genomes/clustering/contig2genome.tsv",
         "genomes/clustering/allbins2genome.tsv",
         "genomes/SSU/ssu_summary.tsv",
