Add atlas/scripts/utils as sub package to atlas

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -30,5 +30,6 @@ include atlas/report/qc_report.py
 include atlas/report/report.css
 include atlas/report/assembly_report.py
 include atlas/report/bin_report.py
-include scripts/utils/fasta.py
-include scripts/utils/__init__.py
+include atlas/scripts/utils/fasta.py
+include atlas/scripts/utils/parsers_bbmap.py
+include atlas/scripts/utils/__init__.py
