--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,7 @@ wheels/
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
-
+.test
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
