genomes and genecatalog depend on assembly

--- a/atlas/Snakefile
+++ b/atlas/Snakefile
@@ -138,12 +138,16 @@ rule all:
         #"finished_genecatalog"
 
 
-# rule in rules/genecatalog.snakefile
-# rule genecatalog:
-#     output:
-#         temp(touch("finished_genecatalog"))
-
-
+rule genecatalog:
+    input:
+        "Genecatalog/gene_catalog.fna",
+        "Genecatalog/gene_catalog.faa",
+        "Genecatalog/counts/median_coverage.tsv.gz",
+        expand("Genecatalog/annotation/single_copy_genes_{domain}.tsv",domain=['bacteria','archaea']),
+        "Genecatalog/annotations/eggNog.tsv",
+        "finished_assembly"
+    output:
+        temp(touch("finished_genecatalog"))
 
 rule genomes:
     input:
@@ -157,6 +161,7 @@ rule genomes:
         "genomes/clustering/contig2genome.tsv",
         "genomes/clustering/allbins2genome.tsv",
         "genomes/SSU/ssu_summary.tsv",
+        "finished_assembly"
     output:
         temp(touch("finished_genomes"))
 
