Atlas2 new API (#162)
*  statred new API
* new `atlas init`
* new API 'atlas run'
* database install on the fly
* centralize conda envs by default to databases/conda_env
* add option to use spades scaffolds with `spades_use_scaffolds: true`in config.yaml
* start updating docs

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,13 +11,9 @@ version: 2
 jobs:
   build:
     <<: *defaults
-    parallelism: 1
+    parallelism: 4
     steps:
       - checkout
-      - run: pwd
-      - run: ls
-      - run: mkdir -p work
-      - run: mv example_data work
       - run: conda config --add channels conda-forge
       - run: conda config --add channels bioconda
       - run: conda config --set always_yes true
@@ -26,54 +22,23 @@ jobs:
       - run: pip install .
       - run: atlas --help
       - run: atlas --version
-      - run: atlas download --help
-      - run: atlas qc --help
-      - run: atlas assemble --help
-      - run: atlas bin-genomes --help
-      - persist_to_workspace:
-          root: work
-          paths:
-            - example_data
-
-  makeconfig:
-    <<: *defaults
-    parallelism: 1
-    steps:
-      - run: pwd
-      - run: ls
-      - run: atlas --help
-      - attach_workspace:
-          at: work
-      - run: ls
-      - run: ls work/example_data
-      - run: cd work
-      - run: atlas make-config --database-dir $DATABASE_DIR --threads $N_THREADS --assembler spades config.yaml example_data
-      - persist_to_workspace:
-          root: work
-          paths:
-            - config.yaml
-
-  dryrun:
-    <<: *defaults
-    parallelism: 1
-    steps:
-      - attach_workspace:
-          at: work
-      - run: cd work
-      - run: atlas download --dryrun
-      - run: atlas qc config.yaml -d $WORKING_DIR --dryrun
-      - run: atlas assemble config.yaml -d $WORKING_DIR --dryrun
-      - run: atlas bin-genomes config.yaml -d $WORKING_DIR --dryrun
-
+      - run: atlas run --help
+      # make config
+      - run: ls example_data
+      - run: atlas init --db-dir $DATABASE_DIR --threads $N_THREADS --assembler spades example_data
+      # dryrun
+      - run: atlas download --db-dir $DATABASE_DIR --dryrun
+      - run: atlas run qc --dryrun
+      - run: atlas run assemble --dryrun
+      - run: atlas run genomes --dryrun
+      - run: atlas run genecatalog --dryrun
+      - run: atlas run --dryrun
+      - run: atlas run qc
+      - run: atlas run assemble
+#      - run: atlas run
 
 workflows:
   version: 2
   build_and_test:
     jobs:
       - build
-      - makeconfig:
-          requires:
-            - build
-      - dryrun:
-          requires:
-            - makeconfig
