Drep overwrite output

--- a/atlas/Snakefile
+++ b/atlas/Snakefile
@@ -204,10 +204,11 @@ rule qc:
 # overwrite commands in rules/download.snakefile
 onsuccess:
     print("ATLAS finished")
-    print("Find out how to use the output of ATLAS on https://metagenome-atlas.readthedocs.io")
+    print("The last rule shows you the main output files")
 
 
 onerror:
+    print("Note the path to the log file for debugging.")
     print("Documentation is available at: https://metagenome-atlas.readthedocs.io")
     print("Issues can be raised at: https://github.com/metagenome-atlas/atlas/issues")
 
