--- a/atlas/Snakefile
+++ b/atlas/Snakefile
@@ -137,17 +137,17 @@ rule all:
         "finished_QC",
         "finished_assembly",
         "finished_genomes"
-        #"finished_genecatalog"
+        "finished_genecatalog"
 
 
 rule genecatalog:
     input:
         "Genecatalog/gene_catalog.fna",
         "Genecatalog/gene_catalog.faa",
-        "Genecatalog/counts/median_coverage.tsv.gz",
+        #"Genecatalog/counts/median_coverage.tsv.gz",
         expand("Genecatalog/annotation/single_copy_genes_{domain}.tsv",domain=['bacteria','archaea']),
         "Genecatalog/annotations/eggNog.tsv",
-        "finished_assembly"
+        "finished_genomes"
     output:
         temp(touch("finished_genecatalog"))
 
