scg are buging all the time removing them

--- a/atlas/Snakefile
+++ b/atlas/Snakefile
@@ -145,7 +145,7 @@ rule genecatalog:
         "Genecatalog/gene_catalog.fna",
         "Genecatalog/gene_catalog.faa",
         #"Genecatalog/counts/median_coverage.tsv.gz",
-        expand("Genecatalog/annotation/single_copy_genes_{domain}.tsv",domain=['bacteria','archaea']),
+        # expand("Genecatalog/annotation/single_copy_genes_{domain}.tsv",domain=['bacteria','archaea']),
         "Genecatalog/annotations/eggNog.tsv",
         "finished_genomes"
     output:
